--- a/EmpInfo/Views/Account/Login.cshtml
+++ b/EmpInfo/Views/Account/Login.cshtml
@@ -119,7 +119,7 @@
                     var phoneNumber = $("#phoneNumber").val();
                     var emailCode = $("#emailCode").val();
                     if (phoneNumber == "" && emailCode == "") {
-                        toastr.error("手机号码与邮箱验证必须至少输入一项才可以验证通过。如果两者都没有在人事系统登记或信息有变动，请联系人事部更新或补全信息");
+                        toastr.error("手机号码与邮箱验证必须至少输入一项才可以验证通过。如果两者都没有在人事系统登记或信息有变动，请联系部门文员到人事系统更新或补全信息");
                         return;
                     }
                     $.post("@Url.Content("~/Account/ValidatePhoneAndEmail")", { card_no: cardNumber, phone_number: phoneNumber, email_code: emailCode }, function (data) {
