--- a/EmpInfo/Views/Admin/Department.cshtml
+++ b/EmpInfo/Views/Admin/Department.cshtml
@@ -415,7 +415,7 @@
                 </div>
                 <br />
                 <div class="b-div">
-                    <span class="b-label" style="text-decoration-style:">
+                    <span class="b-label">
                         状态：
                     </span>
                     <span id="depStatus"></span>
