--- a/EmpInfo/Views/Apply/BeginApplySA.cshtml
+++ b/EmpInfo/Views/Apply/BeginApplySA.cshtml
@@ -106,7 +106,7 @@
             <li><span class="glyphicon glyphicon-hand-right"></span></li>
             <li><a href="@Url.Content("~/Home/Index")">主页</a></li>            
             <li><a href="@Url.Content("~/Home/WorkGroupIndex")">智慧办公</a></li>
-            <li><a href="@string.Concat(Url.Content("~/Apply/ApplyIndex?billType=SA&billName="), Uri.EscapeDataString("仓管权限申请"))">仓管权限</a></li>
+            <li><a href="@Url.Content("~/Apply/ApplyIndex?billType=SA")">仓管权限</a></li>
             <li class="active">开始申请</li>
         </ol>
     </div>
