--- a/EmpInfo/Views/Shared/_ConfirmDialog.cshtml
+++ b/EmpInfo/Views/Shared/_ConfirmDialog.cshtml
@@ -13,7 +13,7 @@
                 <p id="confirm_content" class="text-danger"></p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-mail-reply"></i> <span id="cf_text_cancel">取消</span></button>
+                <button id="cf_bt_cancel" type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-mail-reply"></i> <span id="cf_text_cancel">取消</span></button>
                 <button id="cf_bt_confirm" type="button" class="btn btn-success"><i class="fa fa-check"></i> <span id="cf_text_confirm">确定</span></button>
             </div>
         </div>
