--- a/EmpInfo/Views/Apply/BeginAuditALApply.cshtml
+++ b/EmpInfo/Views/Apply/BeginAuditALApply.cshtml
@@ -10,7 +10,7 @@
         $(function () {
 
             $("#applyContent").load("@Url.Content("~/Apply/CheckALApply?")", { sysNo: "@bam.sysNum" }, function () {
-                $("#applyContent .panel-heading").html("<i class='fa fa-list'></i> 请假申请单详情");
+                $($("#applyContent .panel-heading")[0]).html("<i class='fa fa-list'></i> 请假申请单详情");
                 $("#waiting").remove();
                 $(".auditContent").css("visibility", "visible");
             });
@@ -30,7 +30,7 @@
                 }, function (data) {
                     if (data.suc) {
                         toastr.success(data.msg);
-                        setTimeout(function () { window.location.href = "@Url.Content("~/Apply/GetMyAuditingALList")"; }, 2000);
+                        setTimeout(function () { window.location.href = "@Url.Content("~/Apply/GetMyAuditingList?billType=AL")"; }, 2000);
                     } else {
                         toastr.error(data.msg);
                     }
