--- a/EmpInfo/Views/Home/WorkGroupIndex.cshtml
+++ b/EmpInfo/Views/Home/WorkGroupIndex.cshtml
@@ -56,7 +56,7 @@
     <div class="panel-body" id="workGroup">
         <div class="row" style="margin: 0;">            
             <div class="col-xs-4 col-sm-3 col-md-2">
-                <a href="@string.Concat(Url.Content("~/Apply/ApplyIndex?billType=AL&billName="),Uri.EscapeDataString("请假申请单"))">
+                <a href="@Url.Content("~/Apply/ApplyIndex?billType=AL")">
                     <img src="@Url.Content("~/Content/images/leave.png")" alt="leave" class="center-block" />
                     <p class="text-center">请假申请</p>
                 </a>
@@ -77,7 +77,7 @@
             </div>
             @*@if (auts.IndexOf("ModuelTest") >= 0) {*@
                 <div class="col-xs-4 col-sm-3 col-md-2">
-                    <a href="@string.Concat(Url.Content("~/Apply/ApplyIndex?billType=SA&billName="), Uri.EscapeDataString("仓管权限申请"))">
+                    <a href="@Url.Content("~/Apply/ApplyIndex?billType=SA")">
                         <img src="@Url.Content("~/Content/images/stock.png")" alt="leave" class="center-block" />
                         <p class="text-center">仓管权限申请</p>
                     </a>
@@ -91,6 +91,23 @@
                     </a>
                 </div>
             }
+            @if (auts.IndexOf("UnnormalCH") >= 0) {
+                <div class="col-xs-4 col-sm-3 col-md-2">
+                    <a href="@Url.Content("~/Apply/ApplyIndex?billType=UC")">
+                        <img src="@Url.Content("~/Content/images/uc.png")" alt="leave" class="center-block" />
+                        <p class="text-center">非正常出货</p>
+                    </a>
+                </div>
+            }
+            @if (auts.IndexOf("AssistantEmps") >= 0) {
+                <div class="col-xs-4 col-sm-3 col-md-2">
+                    <a href="@Url.Content("~/Report/AssistantEmps")">
+                        <img src="@Url.Content("~/Content/images/assist.png")" alt="assist" class="center-block" />
+                        <p class="text-center">基干/辅助职员查询</p>
+                    </a>
+                </div>
+            }
+            
         </div>
     </div>
 </div>
